--- a/tensorflow-main-notes.html
+++ b/tensorflow-main-notes.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Heyang Gong" />
 
-<meta name="date" content="2017-09-14" />
+<meta name="date" content="2017-09-20" />
 
 <title>TensorFlow 快猛糙</title>
 
@@ -119,7 +119,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">TensorFlow 快猛糙</h1>
 <h4 class="author"><em>Heyang Gong</em></h4>
-<h4 class="date"><em>2017-09-14</em></h4>
+<h4 class="date"><em>2017-09-20</em></h4>
 
 </div>
 
@@ -129,12 +129,25 @@ $(document).ready(function () {
 <li><a href="#tensorflow.rstudio.com"><span class="toc-section-number">1.1</span> tensorflow.rstudio.com</a><ul>
 <li><a href="#estimators"><span class="toc-section-number">1.1.1</span> Estimators</a></li>
 <li><a href="#keras"><span class="toc-section-number">1.1.2</span> Keras</a></li>
+<li><a href="#core-tensorflow-api"><span class="toc-section-number">1.1.3</span> core TensorFlow API</a></li>
 </ul></li>
 </ul></li>
 </ul>
 </div>
 
 <p>This project aims to help me to use TensorFlow as soon as possible!</p>
+<p>TensorFlow is an open source software library for numerical computation using data flow graphs. 它是开源库，用于数值计算，用数据流图这个工具来实现。那么有几个问题：</p>
+<ul>
+<li>数值计算是指什么？什么是计算？为什么说各种模型就是计算？参考计算概论课程。</li>
+<li>Data flow graphs 是个什么鬼？它是计算过程的一种模拟。用图这个抽象的工具来模拟了计算过程。</li>
+</ul>
+<p>在Data flow graphs 这个计算框架内：</p>
+<ul>
+<li><p>The Keras API for TensorFlow provides a high-level interface for neural networks, with a focus on enabling fast experimentation. 专攻神经网路</p></li>
+<li><p>The Estimator API for TensorFlow provides high-level implementations of common model types such as regressors and classifiers. 专攻各种统计模型</p></li>
+<li><p>The Core TensorFlow API is a lower-level interface that provides full access to the TensorFlow computational graph. 专攻底层实现</p></li>
+</ul>
+<p>他们都是数据流图框架内的算法，应对不同数值计算任务开发出来的计算模块。TensorFlow™ 是一个使用数据流图进行数值计算的开源软件库。图中的节点代表数学运算， 而图中的边则代表在这些节点之间传递的多维数组（张量）。</p>
 <p>文章思考和组织过程：</p>
 <pre><code>1. Installation of TensorFlow on Ubuntu! see &lt;github.com/rstudio/tensorflow&gt; R中的安装如此简单愉快！ 
 2. tensorflow.rstudio.com is the first article I should carefully read.
@@ -154,6 +167,8 @@ $(document).ready(function () {
 sess = tf$Session()
 hello &lt;- tf$constant(&quot;hello, TensorFlow&quot;)
 sess$run(hello)</code></pre>
+<pre class="r"><code>file.edit(&quot;scripts/simple-things.py&quot;)
+file.edit(&quot;scripts/simple-things.ipynb&quot;)</code></pre>
 <div id="tensorflow.rstudio.com" class="section level2">
 <h2><span class="header-section-number">1.1</span> tensorflow.rstudio.com</h2>
 <p>Tensorflow is an software library. Keras API provides a high-level interface for neural network, while estimator API is about regressors and classifiers. This website has three introduction 栏目 of Keras, Estimators and Core!</p>
@@ -161,24 +176,28 @@ sess$run(hello)</code></pre>
 <h3><span class="header-section-number">1.1.1</span> Estimators</h3>
 <pre class="r"><code>devtools::install_github(&quot;rstudio/tfestimators&quot;)</code></pre>
 <p>Let’s have a quick start!</p>
-<pre class="r"><code>library(tfestimators)
+<pre class="r"><code>## 准备数据
+library(tfestimators)
+indices &lt;- sample(1:nrow(mtcars), size = 0.80 * nrow(mtcars))
+train &lt;- mtcars[indices, ]
+test  &lt;- mtcars[-indices, ]
+
+## 模型构建
 # return an input_fn for a given subset of data
 mtcars_input_fn &lt;- function(data) {
   input_fn(data, 
            features = c(&quot;disp&quot;, &quot;cyl&quot;), 
            response = &quot;mpg&quot;)
 }
-
 cols &lt;- feature_columns( 
   column_numeric(&quot;disp&quot;, &quot;cyl&quot;)
 )
-
 model &lt;- linear_regressor(feature_columns = cols)
 
-indices &lt;- sample(1:nrow(mtcars), size = 0.80 * nrow(mtcars))
-train &lt;- mtcars[indices, ]
-test  &lt;- mtcars[-indices, ]
 
+
+
+## 运行模型
 # train the model
 model %&gt;% train(mtcars_input_fn(train))
 
@@ -187,9 +206,15 @@ model %&gt;% predict(mtcars_input_fn(obs))</code></pre>
 </div>
 <div id="keras" class="section level3">
 <h3><span class="header-section-number">1.1.2</span> Keras</h3>
+<ul>
+<li>这里用到 tensorflow 了吗？</li>
+</ul>
 <p>Let’s have a quick start!</p>
+<p>数据准备和查看</p>
 <pre class="r"><code>library(keras)
-mnist &lt;- dataset_mnist()
+# mnist &lt;- dataset_mnist()
+# save(mnist,file = &quot;~/test/data/mnist.Rdata&quot;)
+load(&quot;~/test/data/mnist.Rdata&quot;)
 x_train &lt;- mnist$train$x
 y_train &lt;- mnist$train$y
 x_test &lt;- mnist$test$x
@@ -203,16 +228,15 @@ x_train &lt;- x_train / 255
 x_test &lt;- x_test / 255
 
 y_train &lt;- to_categorical(y_train, 10)
-y_test &lt;- to_categorical(y_test, 10)
-
-model &lt;- keras_model_sequential() 
+y_test &lt;- to_categorical(y_test, 10)</code></pre>
+<p>模型构建</p>
+<pre class="r"><code>model &lt;- keras_model_sequential() 
 model %&gt;% 
   layer_dense(units = 256, activation = 'relu', input_shape = c(784)) %&gt;% 
   layer_dropout(rate = 0.4) %&gt;% 
   layer_dense(units = 128, activation = 'relu') %&gt;%
   layer_dropout(rate = 0.3) %&gt;%
   layer_dense(units = 10, activation = 'softmax')
-
 summary(model)
 
 model %&gt;% compile(
@@ -220,8 +244,9 @@ model %&gt;% compile(
   optimizer = optimizer_rmsprop(),
   metrics = c('accuracy')
 )
-
-history &lt;- model %&gt;% fit(
+summary(model)</code></pre>
+<p>模型执行和计算</p>
+<pre class="r"><code>history &lt;- model %&gt;% fit(
   x_train, y_train, 
   epochs = 30, batch_size = 128, 
   validation_split = 0.2
@@ -232,6 +257,42 @@ plot(history)
 model %&gt;% evaluate(x_test, y_test)
 
 model %&gt;% predict_classes(x_test)</code></pre>
+</div>
+<div id="core-tensorflow-api" class="section level3">
+<h3><span class="header-section-number">1.1.3</span> core TensorFlow API</h3>
+<p>The core TensorFlow API is composed of a set of Python modules that enable constructing and executing TensorFlow graphs. The tensorflow package provides access to the complete TensorFlow API from within R.</p>
+<pre class="r"><code>library(tensorflow)
+
+## 准备数据
+# Create 100 phony x, y data points, y = x * 0.1 + 0.3
+x_data &lt;- runif(100, min=0, max=1)
+y_data &lt;- x_data * 0.1 + 0.3
+
+
+## 构建图模型
+# Try to find values for W and b that compute y_data = W * x_data + b
+# (We know that W should be 0.1 and b 0.3, but TensorFlow will
+# figure that out for us.)
+W &lt;- tf$Variable(tf$random_uniform(shape(1L), -1.0, 1.0))
+b &lt;- tf$Variable(tf$zeros(shape(1L)))
+y &lt;- W * x_data + b
+
+# Minimize the mean squared errors.
+loss &lt;- tf$reduce_mean((y - y_data) ^ 2)
+optimizer &lt;- tf$train$GradientDescentOptimizer(0.5)
+train &lt;- optimizer$minimize(loss)
+
+## 执行和运算模型
+# Launch the graph and initialize the variables.
+sess = tf$Session()
+sess$run(tf$global_variables_initializer())
+
+# Fit the line (Learns best fit is W: 0.1, b: 0.3)
+for (step in 1:201) {
+  sess$run(train)
+  if (step %% 20 == 0)
+    cat(step, &quot;-&quot;, sess$run(W), sess$run(b), &quot;\n&quot;)
+}</code></pre>
 </div>
 </div>
 </div>
